# Embedded_test_ros

./: README.md  UART_ParsingGPS.py
VideoStreaming/: mediamtx_ffmpeg.yml  mediamtx_gstreamer.yml  rgb_cam_ffmpeg.sh  rgb_cam_gstreamer.sh
ros2/: gps_uart.launch.py
ros2/src/gps_position_msgs/: CMakeLists.txt  package.xml
ros2/src/gps_position_msgs/msg/: GpsPosition.msg
ros2/src/gps_uart_reader/: package.xml  setup.cfg  setup.py
ros2/src/gps_uart_reader/gps_uart_reader/: gps_uart_node.py
ros2/src/gps_uart_reader/launch/: gps_uart.launch.py
